--- a/templates/index.html
+++ b/templates/index.html
@@ -17,12 +17,13 @@
 <br>
 
     <section class="homepage">
-        <div>
-            <img src ="/static/images/ralph_pirate.PNG" alt="pirate guitarist" width="200">
+        <div class="homepage_image">
+            <img src ="/static/images/Ralph_Guitaarrr.PNG" alt="pirate guitarist" width="200">
         </div>
-        <div>
+        <div class="homepage_image">
             <p class="slogan">Serving Landlubbers since 1685</p>
         </div>
 
     </section>
+
 {% endblock %}
