--- a/templates/guitars/new.html
+++ b/templates/guitars/new.html
@@ -2,6 +2,7 @@
 
 {% block home %}
 
+<!-- NAVIGATION -->
 <header>
     <div>
         <nav>
@@ -15,64 +16,64 @@
 </header>
 
 <br>
+
 <div style="text-align:center;">
     <b>adding guitar</b>
-    </div>
+</div>
 
 <section class="guitar-container">
 
-<div class="new-guitar">
+    <div class="new-guitar">
 
-<form action="/guitars" method="post">
+        <form action="/guitars" method="post">
 
-<div>
-    <label for="name">Name:</label>
-    <textarea  id="name" name="name" rows="1" cols="35" placeholder="Name" required autofocus></textarea>
-</div>
+            <div>
+                <label for="name">Name:</label>
+                <textarea  id="name" name="name" rows="1" cols="35" placeholder="Name" required autofocus></textarea>
+            </div>
 
-<div>
-    <label for="description">Description:</label>
-    <textarea id="description" name="description"  rows="3" cols="35" placeholder="Description" required autofocus></textarea>
-</div>
+            <div>
+                <label for="description">Description:</label>
+                <textarea id="description" name="description"  rows="3" cols="35" placeholder="Description" required autofocus></textarea>
+            </div>
 
-<div>
-    <label for="stock">No. in Stock:</label>
-    <input type="number" size="1" id="stock" name="stock"  placeholder="Stock No." required autofocus>
-</div>
+            <div>
+                <label for="stock">No. in Stock:</label>
+                <input type="number" size="1" id="stock" name="stock"  placeholder="Stock No." required autofocus>
+            </div>
 
-<div>
-    <label for="minimum stock">Minimum stock number:</label>
-    <input type="number" id="min_stock" name="min_stock" placeholder="Min. Stock" required autofocus>
-</div>
+            <div>
+                <label for="minimum stock">Minimum stock number:</label>
+                <input type="number" id="min_stock" name="min_stock" placeholder="Min. Stock" required autofocus>
+            </div>
 
-<div>
-    <label for="cost price">Cost price: &nbsp; &pound;</label>
-    <input type="text" id="buy_price" class="price-edit" name="buy_price" placeholder="Cost price" required autofocus>
-</div>
+            <div>
+                <label for="cost price">Cost price: &nbsp; &pound;</label>
+                <input type="text" id="buy_price" class="price-edit" name="buy_price" placeholder="Cost price" required autofocus>
+            </div>
 
-<div>
-    <label for="retail price">Retail price: &pound;</label>
-    <input type="text" id="sell_price" class="price-edit" name="sell_price" placeholder="Retail price" required autofocus>
-</div>
+            <div>
+                <label for="retail price">Retail price: &pound;</label>
+                <input type="text" id="sell_price" class="price-edit" name="sell_price" placeholder="Retail price" required autofocus>
+            </div>  
 
-<div>
-    <label for="maker">Maker:</label>
-    <select id="maker_id" name="maker_id">
-    {% for maker in all_makers %}
-        <option value="{{ maker.id }}">
-        {{ maker.name }}
-        </option>
-    {% endfor %}
-    </select>
-    <span><a href="/makers/new">add new maker</a></p></span>
-</div>
+            <div>
+                <label for="maker">Maker:</label>
+                <select id="maker_id" name="maker_id">
+                    {% for maker in all_makers %}
+                        <option value="{{ maker.id }}">
+                            {{ maker.name }}
+                        </option>
+                    {% endfor %}
+                </select>
+                <span><a href="/makers/new">add new maker</a></p></span>
+            </div>
+            <button type="submit">Add Guitar</button>
 
+        </form>
 
-<button type="submit">Add Guitar</button>
-
-</form>
-</div>
-
+    </div>
+    
 </section>
 
 {% endblock %}
